fix: update elements spacing

--- a/practice-two/src/styles/pages/integrations.css
+++ b/practice-two/src/styles/pages/integrations.css
@@ -75,7 +75,7 @@
   }
 
   .integrations-desc {
-    margin-top: 11px;
+    margin-top: 14px;
   }
 
   .integrations-img {
@@ -112,6 +112,6 @@
   }
 
   .integrations-link {
-    padding: 20px 0 55px;
+    padding: 18px 0 55px;
   }
 }
