--- a/practice-two/src/styles/pages/marketing.css
+++ b/practice-two/src/styles/pages/marketing.css
@@ -162,7 +162,7 @@
     border-radius: 13.5px;
     width: 456.8px;
     padding: 12.6px 23.4px;
-    transform: translateY(-113.4px);
+    transform: translateY(-111.5px);
     letter-spacing: -0.25px;
   }
 
