--- a/practice-two/src/styles/pages/revenue.css
+++ b/practice-two/src/styles/pages/revenue.css
@@ -64,7 +64,7 @@
 
   .revenue-desc {
     margin-top: 12px;
-    padding-bottom: 73px;
+    padding-bottom: 75px;
     line-height: 28px;
   }
 
