--- a/practice-two/src/styles/pages/service.css
+++ b/practice-two/src/styles/pages/service.css
@@ -70,10 +70,6 @@
     padding-bottom: 19px;
   }
 
-  .service-wrapper {
-    gap: 36px;
-  }
-
   .service .tag {
     width: 84.6px;
     margin-top: 106.2px;
